--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "knip": "knip"
   },
   "dependencies": {
+    "@openai/agents": "^0.2.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
@@ -22,7 +23,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
